--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.10",
+    "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
